# FFPlayer

./: .gitignore  CMakeLists.txt  README.md
cmake/: DownloadPrebuiltDeps.cmake  FFmpegGyan.cmake  config.h.in  config_components.h.in
docs/: gui-regression.md  issue-hw.md  progress-bar-issues.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md
ffplay-cli/: README.md  ffplay.c
ffplay-gui/: README.md  application.cpp  application.h  application_d3d11.cpp  application_d3d11.h  audio_device.c  audio_device.h  audio_pipeline.c  audio_pipeline.h  audio_thread.c  audio_thread.h  audio_visualizer.c  audio_visualizer.h  av_sync.c  av_sync.h  clock.c  clock.h  decoder.c  decoder.h  demuxer.c  demuxer.h  ffplayer.c  ffplayer.h  filter.c  filter.h  frame_queue.c  frame_queue.h  main.cpp  packet_queue.c  packet_queue.h  read_thread.c  read_thread.h  stream.c  stream.h  subtitle_thread.c  subtitle_thread.h  video_renderer.c  video_renderer.h  video_renderer_d3d11.c  video_renderer_d3d11.h  (+3 more)
ffplay-gui/app/: application.cpp  application.h  main.cpp
ffplay-gui/app/native/: win32_file_dialog.cpp  win32_file_dialog.h  win32_window_proc.cpp  win32_window_proc.h
ffplay-gui/app/render/: video_renderer.c  video_renderer.cpp  video_renderer.h
ffplay-gui/app/ui/: ui_main_menu.cpp  ui_main_menu.h  ui_player_controls.cpp  ui_startup_defaults.cpp  ui_statistics.cpp  ui_util.cpp  ui_util.h
ffplay-gui/app/utils/: time_format.cpp  time_format.h  utf8.c  utf8.h
ffplay-gui/ffplayer/: audio_device.c  audio_device.h  audio_pipeline.c  audio_pipeline.h  av_sync.c  av_sync.h  clock.c  clock.h  decoder.c  demuxer.c  demuxer.h  ffplayer.c  ffplayer.h  filter.c  frame_queue.c  frame_queue.h  read_thread.c  stream.c  stream.h  subtitle_thread.h  video_state.h  video_thread.c
src/shim/include/libavutil/: libm.h
